--- a/src/shared/ui/PageLayout/styles.sass
+++ b/src/shared/ui/PageLayout/styles.sass
@@ -1,4 +1,12 @@
-.container
+.app
+  background-color: var(--bg-color)
+  min-height: 100vh
+  color: var(--primary-color)
+
+  --navbar-height: 50px
+
+
+.content
   display: flex
 
 .main
