--- a/src/shared/ui/Button/styles.sass
+++ b/src/shared/ui/Button/styles.sass
@@ -7,3 +7,29 @@
   border: none
   outline: none
   background: none
+  color: var(--primary-color)
+
+.default
+  box-shadow: 0 1px 0 0 #1c1b18
+  background: linear-gradient(to bottom, #eae0c2 5%, #ccc2a6 100%)
+  background-color: #eae0c2
+  border-radius: 15px
+  border: 2px solid #333029
+  display: inline-block
+  cursor: pointer
+  color: #505739
+  font-family: Arial, sans-serif
+  font-size: 14px
+  font-weight: bold
+  padding: 12px 16px
+  text-decoration: none
+  text-shadow: 0 1px 0 #ffffff
+
+.default:hover
+  background: #ccc2a6 linear-gradient(to bottom, #ccc2a6 5%, #eae0c2 100%)
+
+.default:active
+  position: relative
+  top: 1px
+
+
