--- a/src/shared/ui/AppLink/styles.sass
+++ b/src/shared/ui/AppLink/styles.sass
@@ -1,8 +1,5 @@
-.container
+.primary
   color: var(--primary-color)
 
-.primary
-  color: var(--inverted-primary-color)
-
 .secondary
-  color: var(--inverted-secondary-color)
+  color: var(--color-text-on-s)
