--- a/src/widgets/Sidebar/ui/Sidebar/styles.sass
+++ b/src/widgets/Sidebar/ui/Sidebar/styles.sass
@@ -1,6 +1,6 @@
 .container
   height: calc(100vh - var(--navbar-height))
-  background-color: var(--inverted-bg-color)
+  background-color: var(--color-secondary-d)
   width: var(--sidebar-width-closed)
 
 .open
