--- a/src/app/styles/themes/dark.global.theme.sass
+++ b/src/app/styles/themes/dark.global.theme.sass
@@ -1,8 +1,14 @@
 .dark
-  --bg-color: #282828
-  --inverted-bg-color: #e1e1e1
+  --color-primary: #212121
+  --color-primary-d: #000000
+  --color-primary-l: #484848
 
-  --primary-color: #ead8d8
-  --secondary-color: #b6a7a7
-  --inverted-primary-color: #000628
-  --inverted-secondary-color: rgba(0, 12, 63, 0.49)
+  --color-secondary: #616161
+  --color-secondary-d: #373737
+  --color-secondary-l: #8e8e8e
+
+  --color-text-on-p: #efebe9
+  --color-text-on-s: #fbe9e7
+
+  --bg-color: var(--color-primary)
+  --primary-color: var(--color-text-on-p)
