--- a/src/app/styles/themes/light.global.theme.sass
+++ b/src/app/styles/themes/light.global.theme.sass
@@ -1,8 +1,14 @@
 .light
-  --bg-color: #e1e1e1
-  --inverted-bg-color: #282828
+  --color-primary: #efebe9
+  --color-primary-d: #bdb9b7
+  --color-primary-l: #ffffff
 
-  --primary-color: #000628
-  --secondary-color: rgba(0, 12, 63, 0.49)
-  --inverted-primary-color: #ead8d8
-  --inverted-secondary-color: #b6a7a7
+  --color-secondary: #d6cbc7
+  --color-secondary-d: #a59a96
+  --color-secondary-l: #fffefa
+
+  --color-text-on-p: #212121
+  --color-text-on-s: #263238
+
+  --bg-color: var(--color-primary)
+  --primary-color: var(--color-text-on-p)
