--- a/src/shared/ui/Button/styles.sass
+++ b/src/shared/ui/Button/styles.sass
@@ -1,35 +1,64 @@
-.container
+$primary-bg: var(--color-secondary-l)
+$primary-bg2: var(--color-secondary)
+$primary-text: var(--color-text-on-p)
+
+$secondary-bg: var(--color-secondary)
+$secondary-bg2: var(--color-secondary-d)
+$secondary-text: var(--color-text-on-p)
+
+.btn.primary
+  background-color: $primary-bg
+  color: $primary-text
+  &:hover, &:focus
+    background-color: $primary-bg2
+
+.btn.secondary
+  background-color: $secondary-bg
+  color: $secondary-text
+  &:hover, &:focus
+    background-color: $secondary-bg2
+
+.btn
   cursor: pointer
+  position: relative
+  display: block
+  margin: 30px auto
+  padding: 0
+  overflow: hidden
+  border-width: 0
+  outline: none
+  border-radius: 2px
+  box-shadow: 0 1px 4px rgba(0, 0, 0, .6)
+  transition: background-color .3s
+
+.btn > *
+  position: relative
+
+.btn span
+  display: block
+  padding: 12px 24px
+
+.btn:before
+  content: ""
+  position: absolute
+  top: 50%
+  left: 50%
+  display: block
+  width: 0
+  padding-top: 0
+  border-radius: 100%
+  background-color: rgba(236, 240, 241, .3)
+  transform: translate(-50%, -50%)
+
+.btn:active:before
+  width: 120%
+  padding-top: 120%
+  transition: width .2s ease-out, padding-top .2s ease-out
 
 .clean
-  padding: 0
-  margin: 0
+  cursor: pointer
+  display: block
   border: none
   outline: none
-  background: none
-  color: var(--primary-color)
-
-.default
-  box-shadow: 0 1px 0 0 #1c1b18
-  background: linear-gradient(to bottom, #eae0c2 5%, #ccc2a6 100%)
-  background-color: #eae0c2
-  border-radius: 15px
-  border: 2px solid #333029
-  display: inline-block
-  cursor: pointer
-  color: #505739
-  font-family: Arial, sans-serif
-  font-size: 14px
-  font-weight: bold
-  padding: 12px 16px
-  text-decoration: none
-  text-shadow: 0 1px 0 #ffffff
-
-.default:hover
-  background: #ccc2a6 linear-gradient(to bottom, #ccc2a6 5%, #eae0c2 100%)
-
-.default:active
-  position: relative
-  top: 1px
-
-
+  background-color: transparent
+  padding: 0
