--- a/src/shared/ui/ThemeSwitcher/styles.sass
+++ b/src/shared/ui/ThemeSwitcher/styles.sass
@@ -5,7 +5,14 @@
   background-color: transparent
   padding: 0
 
+.button
+  border: none
+  outline: none
+  padding: 0
+  background-color: transparent
+
 .icon
   display: block
   width: 100%
   height: auto
+  color: var(--color-text-on-p)
