--- a/src/widgets/pageLoader/ui/PageLoader/styles.sass
+++ b/src/widgets/pageLoader/ui/PageLoader/styles.sass
@@ -4,7 +4,7 @@
   justify-content: center
   align-items: center
   flex-grow: 1
-  color: var(--inverted-bg-color)
+  color: var(--color-primary)
 
 
 
