--- a/src/shared/ui/AppLink/styles.sass
+++ b/src/shared/ui/AppLink/styles.sass
@@ -1,6 +1,8 @@
+.link
+  text-decoration: none
+
 .primary
-  color: var(--primary-color)
-  font-size: 18px
+  color: var(--color-text-on-p)
 
 .secondary
   color: var(--color-text-on-s)
