--- a/src/widgets/Navbar/styles.sass
+++ b/src/widgets/Navbar/styles.sass
@@ -1,7 +1,7 @@
 .nav
   height: var(--navbar-height)
   width: 100%
-  background-color: var(--color-secondary)
+  background-color: var(--color-secondary-d)
   display: flex
   align-items: center
   padding: 0 20px
