--- a/src/shared/ui/Button/styles.sass
+++ b/src/shared/ui/Button/styles.sass
@@ -34,7 +34,7 @@ $secondary-text: var(--color-text-on-p)
 .btn > *
   position: relative
 
-.btn span
+.btn .inner
   display: block
   padding: 12px 24px
 
