--- a/src/shared/ui/Sidebar/ui/SidebarItem/styles.sass
+++ b/src/shared/ui/Sidebar/ui/SidebarItem/styles.sass
@@ -2,10 +2,14 @@
   display: flex
   flex-wrap: nowrap
   align-items: center
-  gap: 8px
+  gap: 12px
+
+.icon
+  font: var(--font-m)
 
 .item_text
   white-space: nowrap
+  font: var(--font-m)
 
 .item:not(.sidebar_opened) .item_text
   display: none
