--- a/src/app/styles/themes/dark.global.theme.sass
+++ b/src/app/styles/themes/dark.global.theme.sass
@@ -10,5 +10,6 @@
   --color-text-on-p: #efebe9
   --color-text-on-s: #fbe9e7
 
+  --overlay-color: rgba(0 0 0 / 80%)
   --bg-color: var(--color-primary)
   --primary-color: var(--color-text-on-p)
