--- a/src/app/styles/themes/light.global.theme.sass
+++ b/src/app/styles/themes/light.global.theme.sass
@@ -10,5 +10,6 @@
   --color-text-on-p: #212121
   --color-text-on-s: #263238
 
+  --overlay-color: rgba(0 0 0 / .6)
   --bg-color: var(--color-primary)
   --primary-color: var(--color-text-on-p)
