--- a/src/app/styles/variables/global.sass
+++ b/src/app/styles/variables/global.sass
@@ -2,6 +2,10 @@
 \:root
   --font-family-main: 'Roboto', sans-serif
 
+  --font-size-s: 14px
+  --font-line-height-s: 22px
+  --font-s: 400 var(--font-size-s) / var(--font-line-height-s) var(--font-family-main)
+
   --font-size-m: 16px
   --font-line-height-m: 24px
   --font-m: 400 var(--font-size-m) / var(--font-line-height-m) var(--font-family-main)
@@ -17,4 +21,5 @@
 
   --z-modal: 10
 
+  --borrad-s: 2px
   --borrad-m: 4px
