--- a/src/app/styles/themes/light.global.theme.sass
+++ b/src/app/styles/themes/light.global.theme.sass
@@ -10,6 +10,7 @@
   --color-text-on-p: #212121
   --color-text-on-s: #263238
 
+  --border: rgba(214, 203, 199, 0.63)
   --overlay-color: rgba(0 0 0 / .6)
   --bg-color: var(--color-primary)
   --primary-color: var(--color-text-on-p)
