--- a/src/app/styles/index.global.sass
+++ b/src/app/styles/index.global.sass
@@ -2,6 +2,7 @@
 @import "./variables/global.sass"
 @import "./themes/dark.global.theme"
 @import "./themes/light.global.theme"
+@import "./colors.global"
 
 *
   box-sizing: border-box
