--- a/src/app/styles/themes/dark.global.theme.sass
+++ b/src/app/styles/themes/dark.global.theme.sass
@@ -1,15 +1,19 @@
 .dark
+  --color-primary-l: #484848
   --color-primary: #212121
   --color-primary-d: #000000
-  --color-primary-l: #484848
 
+  --color-secondary-l: #373737
   --color-secondary: #616161
   --color-secondary-d: #373737
-  --color-secondary-l: #8e8e8e
 
   --color-text-on-p: #efebe9
   --color-text-on-s: #fbe9e7
+  --color-text-on-d: #f6f6f6
+  --color-error: #ff9393
+  --color-success: #e0ffab
 
+  --border: rgba(214, 203, 199, 0.16)
   --overlay-color: rgba(0 0 0 / 80%)
   --bg-color: var(--color-primary)
   --primary-color: var(--color-text-on-p)
