--- a/src/app/styles/themes/light.global.theme.sass
+++ b/src/app/styles/themes/light.global.theme.sass
@@ -3,12 +3,15 @@
   --color-primary-d: #bdb9b7
   --color-primary-l: #ffffff
 
-  --color-secondary: #d6cbc7
-  --color-secondary-d: #a59a96
   --color-secondary-l: #fffefa
+  --color-secondary: #e0d7d2
+  --color-secondary-d: #72594f
 
   --color-text-on-p: #212121
   --color-text-on-s: #263238
+  --color-text-on-d: #fffaf7
+  --color-error: #e84c19
+  --color-success: var(--color-secondary-d)
 
   --border: rgba(214, 203, 199, 0.63)
   --overlay-color: rgba(0 0 0 / .6)
