--- a/src/shared/ui/ThemeSwitcher/styles.sass
+++ b/src/shared/ui/ThemeSwitcher/styles.sass
@@ -15,4 +15,9 @@
   display: block
   width: 100%
   height: auto
+
+.icon_color_dark
   color: var(--color-text-on-p)
+
+.icon_color_light
+  color: #ffc806
