--- a/src/widgets/Navbar/ui/Navbar/styles.sass
+++ b/src/widgets/Navbar/ui/Navbar/styles.sass
@@ -6,10 +6,9 @@
   align-items: center
   padding: 0 20px
 
-.theme
+.push_right
   margin-left: auto
-  margin-right: 16px
 
-.links
+.items
   display: flex
-  gap: 8px
+  gap: 16px
