--- a/src/widgets/pageLoader/ui/PageLoader/styles.sass
+++ b/src/widgets/pageLoader/ui/PageLoader/styles.sass
@@ -1,10 +1,9 @@
 .container
-  min-height: calc(100vh - var(--navbar-height))
-  display: flex
-  justify-content: center
-  align-items: center
-  flex-grow: 1
-  color: var(--color-primary)
+  position: absolute
+  top: 50%
+  left: 50%
+  transform: translate(-50%, -50%)
+  color: var(--color-text-on-p)
 
 
 
